# flower-maker

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  README.md  bunfig.toml  package.json  vercel.json
agents/: agent.ts  package.json
api/: index.ts  package.json
api/config/: models.ts
api/flower/: combine.ts  generate.ts  order.ts
api/src/routes/: flower.ts
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/ai/: FlowerChat.tsx
client/src/auth/: oidcConfig.ts
client/src/canvas/: MergeEffect.ts  shaders.ts
client/src/data/: templates.ts
client/src/designer/: DesignerView.tsx  FlowerCanvas.tsx  PartEditor.tsx  TemplatePicker.tsx
client/src/flower/: pixi-draw.ts  render.ts
client/src/homepage/: FlowerGrid.tsx  PixiMiniCanvas.tsx
client/src/lib/: utils.ts
client/src/metagame/: FitnessBreakdown.tsx  Leaderboard.tsx
client/src/orders/: ActivityFeed.tsx  OrderFeed.tsx  OrderFlow.tsx
client/src/session/: NameGate.tsx  SessionProvider.tsx
client/src/settings/: ModelPicker.tsx
crates/client-wasm/: Cargo.toml
crates/client-wasm/src/: animation.rs  buffer.rs  lib.rs  merge.rs  simulation.rs
crates/flower-core/: Cargo.toml
docs/: 01-architecture.md  02-schema.md  03-merge-mechanic.md  04-part-catalog.md  05-ai-integration.md  06-rendering.md  07-multiplayer.md  08-orders.md  09-development.md
scripts/: publish-local.ts  setup.sh
server/: CLAUDE.md  spacetime.local.json
server/.github/: copilot-instructions.md
server/spacetimedb/: Cargo.toml
(+56 files in other folders)
